﻿Fixed an issue where knockback power was way too good.