@@ -59,6 +59,7 @@ namespace NExperience
             {
                 WorldGameMode = MainMod.GetGameModeIDs[0];
             }
+            NpcMod.CanSpawnKrampus = false;
             TileMod.PlayerPlacedTiles.Clear();
             MainMod.WarnGameModeChange = true;
             //IsDeathMode = false;
@@ -67,6 +68,22 @@ namespace NExperience
 
         public override void PreUpdate()
         {
+            if (NpcMod.CanSpawnKrampus)
+            {
+                if (Main.dayTime)
+                {
+                    NpcMod.CanSpawnKrampus = false;
+                    MainMod.SendChatMessage("You feel at ease as day rises.", Microsoft.Xna.Framework.Color.Green);
+                }
+            }
+            else
+            {
+                if (Main.xMas && !Main.dayTime && Main.time == 0 && (Main.hardMode || NPC.downedQueenBee) && Main.rand.Next(5) == 0)
+                {
+                    NpcMod.CanSpawnKrampus = true;
+                    MainMod.SendChatMessage("You have a horrible feeling about this night...", Microsoft.Xna.Framework.Color.Red);
+                }
+            }
             UpdateWorldMobRebirthStatus();
         }
 
